--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Caveat', cursive;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
-   
+    
 }
 /* first section design starts here */
 h1 {
