--- a/style.css
+++ b/style.css
@@ -120,3 +120,23 @@ section {
 .goals-fbox:hover {
     background-color: gray;
 }
+/*--footer starts here--*/
+.footer {
+    background-color:tomato;
+    color:white;
+    height:120px;
+
+}
+h3 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Caveat', cursive;
+    margin-bottom: -30px;
+    
+}
+.footer p {
+    text-align: center;
+}
+#para-color {
+    color: black;
+}
