fourth section added

--- a/style.css
+++ b/style.css
@@ -120,7 +120,174 @@ section {
 .goals-fbox:hover {
     background-color: gray;
 }
-/*--footer starts here--*/
+/*-- third section starts here --*/
+.coding-photo {
+   height:300px;
+   width:300px;
+   border-radius: 15px;
+   margin-right: 60px;
+}
+.plan-hp  h2,p {
+    font-weight:20px;
+   
+}
+.plan-hp  h2 {
+    margin-bottom:-10px;
+}
+.hireme-btn {
+    padding:8px 20px;
+    cursor: pointer;
+    background-image:linear-gradient(45deg,tomato,brown,hotpink);
+    border-radius:5px;
+    
+    
+}
+.hireme-btn a {
+    text-decoration: none;
+    color:white;
+    
+}
+.myfuture-plan {
+    display:flex;
+    width: 80%;
+    padding-left:10%;
+    padding-right: 10%;
+    padding-top:50px;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    
+}
+.plan-hp {
+    margin-top:-20px;
+}
+#dream-bg {
+    padding-top:55px;
+}
+/*-- forth section design starts here --*/
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--footer design starts here --
 .footer {
     background-color:tomato;
     color:white;
@@ -139,4 +306,4 @@ h3 {
 }
 #para-color {
     color: black;
-}
+} */
