--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ section {
 .hireme-btn {
     padding:8px 20px;
     cursor: pointer;
+    
     background-image:linear-gradient(45deg,tomato,brown,hotpink);
     border-radius:5px;
     
@@ -164,7 +165,34 @@ section {
     padding-top:55px;
 }
 /*-- forth section design starts here --*/
- 
+.cv-button {
+    padding:12px 20px;
+    cursor: pointer;
+    border-radius:5px;
+    background-color:tomato;
+    border:none;
+} 
+.project-photo {
+    height:300px;
+    width:300px;
+
+}
+.section4 {
+    width: 80%;
+    display:flex;
+    padding-left:15%;
+    padding-right: 15%;
+    padding-top:50px;
+}
+.section-four-hp {
+    margin-bottom:-10px;
+    margin-right: 60px;
+}
+.section-four-hp2 {
+    margin-bottom:-10px;
+}
+/*-- fifth section design starts here --*/
+
 
 
 
