--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ section {
 .contact-me textarea, input {
     width:100%;
     padding:10px;
+    font-family: inherit;
     font-size:1rem;
     text-align: center;
     border:none;
