--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     font-family: 'Caveat', cursive;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+    box-sizing: border-box;
     
 }
 /* first section design starts here */
