--- a/style.css
+++ b/style.css
@@ -1,259 +1,240 @@
 /* common styles */
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Caveat', cursive;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
-    box-sizing: border-box;
-    
+  margin: 0;
+  padding: 0;
+  font-family: "Caveat", cursive;
+  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 /* first section design starts here */
 h1 {
-    font-size: 40px;
-    margin-bottom: -20px;
-    padding-left: 5px;
-    
+  font-size: 40px;
+  margin-bottom: -20px;
+  padding-left: 5px;
 }
 
 .left-child {
-    border-left: 3px solid tomato;
-  
-
+  border-left: 3px solid tomato;
 }
 .orange-color {
-    color: orange;
-
-
+  color: orange;
 }
 p {
-    margin-top: 50px;
-    text-decoration: justify;
-    
+  margin-top: 50px;
+  text-decoration: justify;
 }
 .explore-btn {
-    width: 120px;
-    padding: 12px;
-    background-color:tomato ;
-    color:white;
-    border: none;
-    border-radius:7px;
-    cursor: pointer;
+  width: 120px;
+  padding: 12px;
+  background-color: tomato;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
 }
 .explore-btn:hover {
-    background-color: gray;
+  background-color: gray;
 }
 #para2 {
-    margin-top:20px;
+  margin-top: 20px;
 }
 .right-child {
-    width: 20%;
-    margin: 50px;
+  width: 20%;
+  margin: 50px;
 }
 section {
-    display:flex;
-    
+  display: flex;
 }
 .parent {
-    width: 50%;
-    margin: 70px;
-    text-align: justify;
-   
+  width: 50%;
+  margin: 70px;
+  text-align: justify;
 }
 .first-section {
-    background-image: url(./images/top-banner.png);
-    background-repeat: no-repeat;
+  background-image: url(./images/top-banner.png);
+  background-repeat: no-repeat;
 }
 /* second section design starts here */
 
 .sec2-head {
-    text-align: center;
-    font-size: 20px;
-    
+  text-align: center;
+  font-size: 20px;
 }
 .mission-fbox {
-    width: 250px;
-    border: 1px solid gray;
-    box-shadow: 5px 5px 14px gray;
-    border-radius:15px;
-    background-color:skyblue;
+  width: 250px;
+  border: 1px solid gray;
+  box-shadow: 5px 5px 14px gray;
+  border-radius: 15px;
+  background-color: skyblue;
 }
 .mission-fbox img {
-    width: 50%;
+  width: 50%;
 }
 .flex-box {
-    display: flex;
-    justify-content: space-around;
-    padding:30px;
-    width: 80%;
-    margin: 0 auto;
-    color:white;
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  width: 80%;
+  margin: 0 auto;
+  color: white;
 }
 .fbox-hp {
-    padding: 20px;
+  padding: 20px;
 }
 
-.mission-fbox:hover{
-    background-color:gray;
+.mission-fbox:hover {
+  background-color: gray;
 }
 .vision-fbox {
-    width: 250px;
-    border: 1px solid gray;
-    box-shadow: 5px 5px 14px gray;
-    border-radius:15px;
-    background-color:plum;
+  width: 250px;
+  border: 1px solid gray;
+  box-shadow: 5px 5px 14px gray;
+  border-radius: 15px;
+  background-color: plum;
 }
 .vision-fbox img {
-    width: 50%;
+  width: 50%;
 }
 .vision-fbox:hover {
-    background-color:gray;
+  background-color: gray;
 }
 .goals-fbox {
-    width: 250px;
-    border: 1px solid gray;
-    box-shadow: 5px 5px 14px gray;
-    border-radius:15px;
-    background-color: pink;
+  width: 250px;
+  border: 1px solid gray;
+  box-shadow: 5px 5px 14px gray;
+  border-radius: 15px;
+  background-color: pink;
 }
 .goals-fbox img {
-    width: 50%;
+  width: 50%;
 }
 .goals-fbox:hover {
-    background-color: gray;
+  background-color: gray;
 }
 /*-- third section starts here --*/
 .coding-photo {
-   height:300px;
-   width:300px;
-   border-radius: 15px;
-   margin-right: 60px;
+  height: 300px;
+  width: 300px;
+  border-radius: 15px;
+  margin-right: 60px;
 }
-.plan-hp  h2,p {
-    font-weight:20px;
-   
+.plan-hp h2,
+p {
+  font-weight: 20px;
 }
-.plan-hp  h2 {
-    margin-bottom:-10px;
+.plan-hp h2 {
+  margin-bottom: -10px;
 }
 .hireme-btn {
-    padding:8px 20px;
-    cursor: pointer;
-    
-    background-image:linear-gradient(45deg,tomato,brown,hotpink);
-    border-radius:5px;
-    
-    
+  padding: 8px 20px;
+  cursor: pointer;
+
+  background-image: linear-gradient(45deg, tomato, brown, hotpink);
+  border-radius: 5px;
 }
 .hireme-btn a {
-    text-decoration: none;
-    color:white;
-    
+  text-decoration: none;
+  color: white;
 }
 .myfuture-plan {
-    display:flex;
-    width: 80%;
-    padding-left:10%;
-    padding-right: 10%;
-    padding-top:50px;
-    justify-content: space-between;
-    background-repeat: no-repeat;
-    margin-bottom: 50px;
-    
+  display: flex;
+  width: 80%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 50px;
+  justify-content: space-between;
+  background-repeat: no-repeat;
+  margin-bottom: 50px;
 }
 .plan-hp {
-    margin-top:-20px;
+  margin-top: -20px;
 }
 #dream-bg {
-    padding-top:55px;
+  padding-top: 55px;
 }
 /*-- forth section design starts here --*/
 .cv-button {
-    padding:12px 20px;
-    cursor: pointer;
-    border-radius:5px;
-    background-color:tomato;
-    border:none;
-    color:white;
-} 
+  padding: 12px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: tomato;
+  border: none;
+  color: white;
+}
 .project-photo {
-    height:300px;
-    width:300px;
-
+  height: 300px;
+  width: 300px;
 }
 .section4 {
-    width: 80%;
-    display:flex;
-    padding-left:15%;
-    padding-right: 15%;
-    padding-top:50px;
-    
+  width: 80%;
+  display: flex;
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 50px;
 }
 .section-four-hp {
-    margin-bottom:-10px;
-    margin-right: 60px;
+  margin-bottom: -10px;
+  margin-right: 60px;
 }
 .section-four-hp2 {
-    margin-bottom:-10px;
+  margin-bottom: -10px;
 }
 .cv-button:hover {
-    background-color:springgreen;
+  background-color: springgreen;
 }
 /*-- fifth section design starts here --*/
 .dotted-hr {
-    border: dotted 6px tomato;
-    border-bottom: none;
-    margin:20px auto;
-    width:70px;
+  border: dotted 6px tomato;
+  border-bottom: none;
+  margin: 20px auto;
+  width: 70px;
 }
 .contact-me {
-    padding:1% 7%;
-    text-align:center;
-    background-color:springgreen;
-    margin-top:50px;
-    margin-bottom: 50px;
-    
-
+  padding: 1% 7%;
+  text-align: center;
+  background-color: springgreen;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-.contact-me textarea, input {
-    width:100%;
-    padding:10px;
-    font-family: inherit;
-    font-size:1rem;
-    text-align: center;
-    border:none;
-    border-radius:5px;
-    resize: none;
+.contact-me textarea,
+input {
+  width: 100%;
+  padding: 10px;
+  font-family: inherit;
+  font-size: 1rem;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  resize: none;
 }
 .contact-me button {
-    border:none;
-    border-radius:5px;
-    background-color: tomato;
-    padding:10px 12px;
-    color:white;
-    cursor: pointer;
-    margin: 10px;
-    width:100px;
+  border: none;
+  border-radius: 5px;
+  background-color: tomato;
+  padding: 10px 12px;
+  color: white;
+  cursor: pointer;
+  margin: 10px;
+  width: 100px;
 }
 /*--footer design starts here-- */
 
 .footer {
-    background-color:tomato;
-    color:white;
-    height:120px;
-
+  background-color: tomato;
+  color: white;
+  height: 120px;
 }
 h3 {
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Caveat', cursive;
-    margin-bottom: -30px;
-    
+  text-align: center;
+  font-size: 40px;
+  font-family: "Caveat", cursive;
+  margin-bottom: -30px;
 }
 .footer p {
-    text-align: center;
+  text-align: center;
 }
 #para-color {
-    color: black;
+  color: black;
 }
