style changed of hire-me button

--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ p {
 .hireme-btn {
   padding: 8px 20px;
   cursor: pointer;
-
-  background-image: linear-gradient(45deg, tomato, brown, hotpink);
+  border: none;
+  background-image: linear-gradient(45deg, tomato,hotpink);
   border-radius: 5px;
 }
 .hireme-btn a {
